Fixed right alignment

--- a/src/components/CAM/index.module.scss
+++ b/src/components/CAM/index.module.scss
@@ -85,7 +85,6 @@
       line-height: 24px;
       font-weight: 500;
       opacity: 1;
-      text-align: right;
       @include respond(lg-desktop) {
         font-size: 15px;
         line-height: 1.3;
